--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
 	"name": "testunitaire",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "server.js",
 	"scripts": {
+		"start": "nodemon server.js",
 		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"jest": "^29.5.0"
+		"jest": "^29.5.0",
+		"nodemon": "^2.0.22"
 	},
 	"dependencies": {
 		"express": "^4.18.2"
