--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "nodemon server.js",
-		"test": "jest"
+		"test": "jest --coverage"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,6 +15,7 @@
 		"nodemon": "^2.0.22"
 	},
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"supertest": "^6.3.3"
 	}
 }
